# bas-veeg-arc-2

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_WINDOWS.md  CMakeLists.txt  LICENSE  README.md  build.sh
docs/: AI_ASSET_GUIDE.md  DEVELOPMENT.md  PROJECT_STATUS.md
include/audio/: AudioEngine.hpp
include/core/: Engine.hpp  GameStateManager.hpp  InputManager.hpp
include/gameplay/: Boss.hpp  Character.hpp  Characters.hpp
include/graphics/: GraphicsEngine.hpp  LightingManager.hpp  ParticleManager.hpp  PostProcessManager.hpp  ProceduralGenerator.hpp
include/network/: NetworkManager.hpp
include/physics/: PhysicsEngine.hpp
include/ui/: UIManager.hpp
shaders/: PBR.frag  PBR.vert  Particle.frag  Particle.vert  PostProcess.frag
src/: main.cpp
src/audio/: AudioEngine.cpp
src/core/: Engine.cpp  GameStateManager.cpp  InputManager.cpp
src/gameplay/: Boss.cpp  Character.cpp  Characters.cpp
src/graphics/: GraphicsEngine.cpp  LightingManager.cpp  ParticleManager.cpp  PostProcessManager.cpp  ProceduralGenerator.cpp
src/network/: NetworkManager.cpp
src/physics/: PhysicsEngine.cpp
src/ui/: UIManager.cpp
